add admin and user docs
